--- a/app/views/astronauts/index.html.erb
+++ b/app/views/astronauts/index.html.erb
@@ -1,7 +1,13 @@
 <h1>All Astronauts</h1>
-<% @astronauts.each do |astronaut| %>
-  <%= astronaut.name %>
-  <%= astronaut.age %>
-  <%= astronaut.job %>
+<ul>
+  <% @astronauts.each do |astronaut| %>
+  <li>Name: <%= astronaut.name %></li>
+  <li>Age: <%= astronaut.age %></li>
+  <li>Job: <%= astronaut.job %></li><br />
+    <p>Space Missions: </p>
+    <% astronaut.alpha_order.each do |mission| %>
+    <li><%= mission.title %></li>
+    <% end %>
 <% end %>
+</ul>
 <p>Average Age: <%= @astronauts.average_age %></p>
